WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291047
REGRESSION(
293103@main
) [WebDriver] injected evaluateJavaScriptFunction fails with wrong argument in resultCallback
https://bugs.webkit.org/show_bug.cgi?id=291047
Summary
REGRESSION(293103@main) [WebDriver] injected evaluateJavaScriptFunction fails...
Lauro Moura
Reported
2025-04-03 19:20:42 PDT
Example console error when evaluating JS code after
293103@main
: DEBUG:selenium.webdriver.remote.websocket_connection:<- {'params': {'type': 'javascript', 'level': 'error', 'text': "Unhandled Promise Rejection: TypeError: resultCallback is not a function. (In 'resultCallback(frameID,processID,callbackID,error)', 'resultCallback' is -1)", 'timestamp': 1743726431781.3389, 's This is happening because the injected code in `WebAutomationSessionProxy.js` still expects the removed `processID` parameter, alongside related C++ indexes in evaluateJavaScriptCallback in WebAutomationSessionProxy.cpp Patch incoming.
Attachments
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2025-04-03 19:23:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43614
EWS
Comment 2
2025-04-04 06:25:13 PDT
Committed
293236@main
(9a60ab27161a): <
https://commits.webkit.org/293236@main
> Reviewed commits have been landed. Closing PR #43614 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-04-04 06:26:15 PDT
<
rdar://problem/148590339
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug