REGRESSION(293103@main) [WebDriver] injected evaluateJavaScriptFunction fails with wrong argument in resultCallback https://bugs.webkit.org/show_bug.cgi?id=291047

Reviewed by Alex Christensen.

In 293103@main, the processID argument was dropped. This commit adjusts
the injected JS for evaluateJavaScriptFunction and related C++ code that
handles the result.

* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::evaluateJavaScriptCallback):
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.js:
(let.AutomationSessionProxy.prototype.evaluateJavaScriptFunction):

Canonical link: https://commits.webkit.org/293236@main